k8s-rpi-apps-pihole/00-pihole-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    app: pihole
