k8s-rpi-apps-pihole/05-service-dns-udp.yaml
---
# Source: pihole/templates/service-dns-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-rpi-pihole-dns-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc    
    avp.kubernetes.io/path: "k8secrets/pihole"    
  labels:
    app: pihole
    chart: pihole-2.0.1
    release: k8s-rpi
    heritage: Helm
spec:
  type: LoadBalancer
  loadBalancerIP: <piholeip>
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
  selector:
    app: pihole
    release: k8s-rpi
