k8s-rpi-apps-pihole/06-service-web.yaml
---
# Source: pihole/templates/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-rpi-pihole-web
  labels:
    app: pihole
    chart: pihole-2.0.1
    release: k8s-rpi
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app: pihole
    release: k8s-rpi
---
