k8s-rpi-apps-pihole/07-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-rpi-pihole-ui
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/pihole"    
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`<piholehostname>`)
    kind: Rule
    services:
    - name: k8s-rpi-pihole-web
      port: 80
